# yolov5

./: MANIFEST.in  __init__.py  detect.py  export.py  hubconf.py  setup.cfg  test.py  train.py  val.py
data/: Objects365.yaml  xView.yaml
models/: common.py  experimental.py  export.py  tf.py  yolo.py
utils/: datasets.py  general.py  google_utils.py  loss.py  plots.py  torch_utils.py
utils/aws/: resume.py
utils/loggers/: __init__.py
utils/loggers/wandb/: sweep.py  wandb_utils.py
