[metadata]
name = yolov5
version = 1.0.0
author = Ikomia SAS
author_email = contact@ikomia.com
description = Python package of original yolov5 project from Ultralytics
url = https://github.com/Ikomia-dev/yolov5

[options]
include_package_data = True

packages =
    yolov5
    yolov5.data
    yolov5.models
    yolov5.utils
    yolov5.weights

package_dir =
    yolov5 = .
    yolov5.data = data
    yolov5.models = models
    yolov5.utils = utils
    yolov5.weights = weights

python_requires = >=3.6

install_requires =
    Cython
    matplotlib>=3.2.2
    numpy>=1.18.5
    opencv-python>=4.1.2
    Pillow==8.1.0
    PyYAML>=5.3
    scipy>=1.4.1
    tensorboard>=2.2
    torch>=1.7.0
    torchvision>=0.8.1
    tqdm>=4.41.0
    seaborn>=0.11.0
    pandas
    thop
    pycocotools>=2.0

[options.packages.find]
where = .